--- a/Part1/index.html
+++ b/Part1/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <header>
-        <h1>Форма обратной связи</h1>
+        <div class="block block-title">
+            Форма обратной связи
+        </div>
     </header>
     <main>
         <form method="post" action="https://httpbin.org/post" enctype="multipart/form-data">
